add swagger on application

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,14 @@ logging:
     com:
       example: TRACE
 
+### SWAGGER
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /docs
+    operationsSorter: method
+
 ### ACTUATOR
 management:
   endpoint:
